# react-flask

./: .eslintrc.js  .gitignore  .yarnrc.yml  404.html  Makefile  README.md  build.mjs  index.html  mkdocs.yml  mypy.ini  package.json  prettier.config.js  pyproject.toml  server.py  tsconfig.json
configuration/: index.html
docs/: configuration.md  features.md  index.md  install.md  todo.md  tutorial.md  types_conversion.md
features/: index.html
install/: index.html
search/: search_index.json
src/: app.py  cli.py  settings.py  utils.py
src/apis/: blueprint.py  types.py  types_manager.py
src/beckett/: app.py  blueprint.py
src/beckett/converters/: README.md
src/beckett/converters/typescript/: __init__.py  converter.py
src/beckett/renderer/: README.md
src/beckett/renderer/html/: renderer.py
src/beckett/renderer/typescript_react/: context_processor.py  interfaces.py  renderer.py
src/beckett/types/: __init__.py  types.py  types_manager.py
src/js/: render_react.tsx
src/js/api/: index.tsx  query.ts  types.ts
src/js/components/: csrf.tsx  loading.tsx
src/js/template/example/: react_example.tsx  react_example.type.ts
src/js/template/people/: react_example.tsx  test_page.tsx  test_page.type.ts
src/render_react/: converter.py  imports.py  interfaces.py  renderer.py
src/template/: base.html  base.jinja2  beckett_page.jinja2  beckett_page.template  render_react.jinja2
src/template/example/: base_page.jinja2
src/template/index/: base_page.jinja2
src/views/: __init__.py  example.py  index.py  people.py
todo/: index.html
tutorial/: index.html
types_conversion/: index.html
