[tool.isort]
profile = "black"


[tool.poetry]
name = "flask-render-react"
version = "0.1.0"
description = "Flask routing, React views"
authors = ["Paul Hallett <paulandrewhallett@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_render_react"}]

[tool.poetry.dependencies]
python = "3.11.2"
Flask = "^2.2.3"
attrs = "^22.2.0"
Jinja2 = "^3.1.2"
types-attrs = "^19.1.0"
mypy = "^1.1.1"
click = "^8.1.3"
isort = "^5.12.0"
black = "^23.3.0"
structlog = "^22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
