[tool.isort]
profile = "black"


[tool.poetry]
name = "beckett"
version = "0.1.0"
description = "A strongly-linked Python & Typescript Framework"
authors = ["Paul Hallett <paulandrewhallett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "^2.2.3"
attrs = "^22.2.0"
Jinja2 = "^3.1.2"
types-attrs = "^19.1.0"
mypy = "^1.1.1"
click = "^8.1.3"
isort = "^5.12.0"
black = "^23.3.0"
structlog = "^22.3.0"
attrs-strict = "^1.0.0"
inflection = "^0.5.1"
cattrs = "^22.2.0"
ruff = "^0.0.267"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
