[tool.isort]
profile = "black"


[tool.poetry]
name = "react-flask"
version = "0.1.0"
description = "Fully typed Flask and React applications"
authors = ["Paul Hallett <paulandrewhallett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "^2.2.3"
Jinja2 = "^3.1.2"
mypy = "^1.1.1"
click = "^8.1.3"
isort = "^5.12.0"
black = "^23.3.0"
structlog = "^22.3.0"
inflection = "^0.5.1"
ruff = "^0.0.267"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.13"
pydantic = "^2.0.3"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
